[package]
name = "sv"
version = "0.1.11"
description = "A Rust library for working with Bitcoin SV"
repository = "https://github.com/brentongunning/rust-sv"
authors = ["Brenton Gunning <brentongunning@gmail.com>"]
keywords = ["bitcoin", "sv", "cash", "crypto"]
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.2"
digest = "0.7"
dns-lookup = "0.9"
hex = "0.3"
linked-hash-map = "0.5"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
murmur3 = "0.4"
rand = "0.5"
ring = "0.14"
ripemd160 = "0.7"
rust-base58 = "0.0"
rust-crypto = "0.2"
secp256k1 = "0.12"
snowflake = "1.3"

[profile.release]
opt-level = "s"     # Optimize for size over speed
lto = true          # Enable link-time optimizations to shrink binary
